// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vuetify preset > parses both default (Revert "<subject>") and custom (revert: <subject>) revert commits 1`] = `
# [](https://github.com/vuetifyjs/conventional-changelog-vuetify/compare/v1.0.0...v) (2001-09-11)


### :rocket: Features

* implementing [#5](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/5) by [@dlmr](https://github.com/dlmr) ([0000001](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000001)), closes [#10](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/10)
* some more features ([0000002](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000002))


### :arrows_counterclockwise: Reverts

* feat: custom revert format ([0000003](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000003))
* Revert "feat: default revert format" ([0000004](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000004))




`;

exports[`vuetify preset > should not discard commit if there is BREAKING CHANGE 1`] = `
#  (2001-09-11)


### :rocket: Features

* amazing new module ([0000001](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000001))
* **awesome:** issue brought up by [@bcoe](https://github.com/bcoe)! on Friday ([0000002](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000002))
* **awesome:** fix [#88](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/88) ([0000003](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000003))
* **awesome:** addresses the issue brought up in [#133](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/133) ([0000004](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000004))


### :wrench: Bug Fixes

* oops ([0000005](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000005))
* **compile:** avoid a bug ([0000006](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000006))


### :fire: Performance Improvements

* **ngOptions:** make it faster ([0000007](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000007)), closes [#1](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/1) [#2](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/2)


### :microscope: Code Refactoring

* **code:** change a lot of code ([0000008](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000008))


### :arrows_counterclockwise: Reverts

* **ngOptions:** bad commit ([0000009](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000009))


### Other Commits

* test(*): more tests ([0000010](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000010))
* style(whitespace): make it easier to read ([0000011](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000011))
* docs(readme): make it clear ([0000012](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000012))
* ci(travis): setup travis ([0000013](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000013))
* build(npm): edit build script ([0000014](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000014))
* ci(travis): add TravisCI pipeline ([0000015](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000015))
* build: first build setup ([0000016](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000016))


### BREAKING CHANGES

* The Change is huge.
* **code:** The Change is huge.
* **whitespace:** The Change is huge.
* **readme:** The Change is huge.
* **travis:** The Change is huge.
* **npm:** The Change is huge.
* **compile:** The Change is huge.
* Not backward compatible.
* **travis:** Continuously integrated.
* New build system.




`;

exports[`vuetify preset > should only replace with link to user if it is an username 1`] = `
# [](https://github.com/vuetifyjs/conventional-changelog-vuetify/compare/v1.0.0...v) (2001-09-11)


### :rocket: Features

* implementing [#5](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/5) by [@dlmr](https://github.com/dlmr) ([0000001](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000001)), closes [#10](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/10)
* some more features ([0000002](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000002))




`;

exports[`vuetify preset > should remove the issues that already appear in the subject 1`] = `
#  (2001-09-11)


### :rocket: Features

* amazing new module ([0000001](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000001))
* **awesome:** fix [#88](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/88) ([0000002](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000002))
* **awesome:** addresses the issue brought up in [#133](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/133) ([0000003](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000003))


### :wrench: Bug Fixes

* oops ([0000004](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000004))
* **compile:** avoid a bug ([0000005](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000005))


### :fire: Performance Improvements

* **ngOptions:** make it faster ([0000006](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000006)), closes [#1](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/1) [#2](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/2)


### :arrows_counterclockwise: Reverts

* **ngOptions:** bad commit ([0000007](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000007))


### Other Commits

* ci(travis): add TravisCI pipeline ([0000008](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000008))
* build: first build setup ([0000009](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000009))


### BREAKING CHANGES

* **compile:** The Change is huge.
* Not backward compatible.
* **travis:** Continuously integrated.
* New build system.




`;

exports[`vuetify preset > should replace #[0-9]+ with GitHub issue URL 1`] = `
#  (2001-09-11)


### :rocket: Features

* amazing new module ([0000001](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000001))
* **awesome:** addresses the issue brought up in [#133](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/133) ([0000002](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000002))


### :wrench: Bug Fixes

* oops ([0000003](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000003))
* **compile:** avoid a bug ([0000004](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000004))


### :fire: Performance Improvements

* **ngOptions:** make it faster ([0000005](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000005)), closes [#1](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/1) [#2](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/2)


### :arrows_counterclockwise: Reverts

* **ngOptions:** bad commit ([0000006](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000006))


### Other Commits

* ci(travis): add TravisCI pipeline ([0000007](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000007))
* build: first build setup ([0000008](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000008))


### BREAKING CHANGES

* **compile:** The Change is huge.
* Not backward compatible.
* **travis:** Continuously integrated.
* New build system.




`;

exports[`vuetify preset > should replace @username with GitHub user URL 1`] = `
#  (2001-09-11)


### :rocket: Features

* amazing new module ([0000001](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000001))
* **awesome:** issue brought up by [@bcoe](https://github.com/bcoe)! on Friday ([0000002](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000002))
* **awesome:** fix [#88](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/88) ([0000003](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000003))
* **awesome:** addresses the issue brought up in [#133](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/133) ([0000004](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000004))


### :wrench: Bug Fixes

* oops ([0000005](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000005))
* **compile:** avoid a bug ([0000006](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000006))


### :fire: Performance Improvements

* **ngOptions:** make it faster ([0000007](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000007)), closes [#1](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/1) [#2](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/2)


### :arrows_counterclockwise: Reverts

* **ngOptions:** bad commit ([0000008](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000008))


### Other Commits

* ci(travis): add TravisCI pipeline ([0000009](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000009))
* build: first build setup ([0000010](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000010))


### BREAKING CHANGES

* **compile:** The Change is huge.
* Not backward compatible.
* **travis:** Continuously integrated.
* New build system.




`;

exports[`vuetify preset > should work if there is no semver tag 1`] = `
#  (2001-09-11)


### :rocket: Features

* amazing new module ([0000001](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000001))


### :wrench: Bug Fixes

* oops ([0000002](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000002))
* **compile:** avoid a bug ([0000003](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000003))


### :fire: Performance Improvements

* **ngOptions:** make it faster ([0000004](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000004)), closes [#1](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/1) [#2](https://github.com/vuetifyjs/conventional-changelog-vuetify/issues/2)


### :arrows_counterclockwise: Reverts

* **ngOptions:** bad commit ([0000005](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000005))


### Other Commits

* ci(travis): add TravisCI pipeline ([0000006](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000006))
* build: first build setup ([0000007](https://github.com/vuetifyjs/conventional-changelog-vuetify/commit/0000000000000000000000000000000000000007))


### BREAKING CHANGES

* **compile:** The Change is huge.
* Not backward compatible.
* **travis:** Continuously integrated.
* New build system.




`;
